--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               <button>Spring boot</button>
               <button>Spring batch</button>
               <button>REST API</button>
+              <button>Microservices</button>
               <button>MVC</button>
               <button>Thymeleaf</button>
               <button>HTML</button>
@@ -69,6 +70,8 @@
               <button>Docker</button>
               <button>Jenkins</button>
               <button>SonarQube</button>
+              <button>Harness</button>
+              <button>OpenShift</button>
               <button>Git</button>
               <button>Maven</button>
               <button>Gradle</button>
@@ -86,13 +89,16 @@
             A highly motivated and versatile Java developer at Citibank, I bring
             a unique background as a former physiotherapist, applying a holistic
             approach into my work. <br />
+            I developed strong skills in teamwork and cooperation, consistently
+            supporting colleagues in need and contributing to a collaborative
+            and positive work environment. <br />
             Eager to learn and explore new technologies, I am committed to
             increasing my knowledge base and contributing to the success of
             innovative projects. <br />
             I always focus on bringing innovative, effective and less
-            resource-hungry solutions to the given tasks <br />
+            resource-hungry solutions to my tasks. <br />
             Furthermore, my expertise extends to business and financial data
-            analysis, UI development with Thymeleaf and JavaScript - with an
+            analysis, UI development with Thymeleaf and React TS or JS - with an
             interest in expanding my skills with deeper front-end development
             knowlegde, and implementing/maintaining testing tools to ensure data
             quality and consistency.
@@ -130,8 +136,8 @@
             <li>
               <b>Testing and Quality Assurance:</b> Implemented testing tools
               for downstream processes, emphasizing data quality and
-              consistency. Skilled in JUnit4-5 and Mockito for comprehensive
-              testing.
+              consistency. Skilled in JUnit4-5, Mockito and Cucumber for
+              comprehensive TDD and BDD testing.
             </li>
             <li>
               <b>Continuous Learning:</b> Always trying to find time to learn
