refactor skills and studies

--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
               </p>
               <ul>
                 <li>Spring boot</li>
+                <li>Microservices</li>
+                <li>REST API</li>
                 <li>Cryptography</li>
+                <li>Data leak protection</li>
                 <li>Bash</li>
                 <li>Linux</li>
                 <li>Container service - Docker, Kubernetes integration</li>
@@ -186,6 +189,7 @@
               <ul>
                 <li>Spring boot</li>
                 <li>Gradle/Maven</li>
+                <li>Oracle DB</li>
                 <li>Bash</li>
                 <li>Linux</li>
                 <li>
@@ -193,6 +197,10 @@
                 </li>
                 <li>
                   Deep knowledge in testing, JUnit, Mockito, Integration - TDD
+                </li>
+                <li>
+                  Feed monitoring application for application teams' incoming
+                  feeds (circuit breaker)
                 </li>
                 <li>
                   Comparison tool development to test other teams' release
@@ -205,10 +213,6 @@
                 <li>
                   Leading development in a local team, collaborating with
                   developers from all around the world
-                </li>
-                <li>
-                  Front-end development for various applications with JS and
-                  Thymeleaf
                 </li>
               </ul>
             </li>
@@ -266,12 +270,6 @@
               <p>
                 <b class="dates">2013-2017 - </b>Semmelweis University Faculty
                 of Health Sciences - Physical therapist
-              </p>
-            </li>
-            <li>
-              <p>
-                <b class="dates">2008-2013 - </b>Dr. Mező Ferenc Secondary
-                School Nagykanizsa
               </p>
             </li>
           </ul>
