--- a/index.html
+++ b/index.html
@@ -88,71 +88,96 @@
           <p>
             A highly motivated and versatile Java developer at Citibank, I bring
             a unique background as a former physiotherapist, applying a holistic
-            approach into my work. <br />
+            approach into my work.
+          </p>
+          <p>
             I developed strong skills in teamwork and cooperation, consistently
             supporting colleagues in need and contributing to a collaborative
-            and positive work environment. <br />
+            and positive work environment.
+          </p>
+          <p>
             Eager to learn and explore new technologies, I am committed to
             increasing my knowledge base and contributing to the success of
-            innovative projects. <br />
-            I always focus on bringing innovative, effective and less
-            resource-hungry solutions to my tasks. <br />
+            innovative projects.
+          </p>
+          <p>
+            I always focus on bringing innovative, effective, safe and less
+            resource-hungry solutions, ideas to my tasks.
+          </p>
+          <p>
             Furthermore, my expertise extends to business and financial data
-            analysis, UI development with Thymeleaf and React TS or JS - with an
-            interest in expanding my skills with deeper front-end development
-            knowlegde, and implementing/maintaining testing tools to ensure data
-            quality and consistency.
+            analysis, UI development with Thymeleaf and React TS or JS -
+            <br />with an interest in expanding my skills with deeper front-end
+            development knowlegde, and implementing/maintaining testing tools to
+            ensure data quality and consistency.
           </p>
         </div>
         <div class="rightarticle">
           <h2>Key skills and expertise</h2>
           <ul>
             <li>
-              <b>Java Development:</b> Proven expertise in Java programming,
-              with a focus on delivering efficient and scalable backend
-              solutions for dynamic Java Spring Boot and Spring Batch
-              applications.
+              <p>
+                <b>Java Development:</b> Proven expertise in Java programming,
+                with a focus on delivering efficient and scalable backend
+                solutions for dynamic Java Spring Boot and Spring Batch
+                applications.
+              </p>
             </li>
             <li>
-              <b>API Development:</b> Experience in designing and implementing
-              APIs and Rest APIs for communication between applications,
-              microservices
+              <p>
+                <b>API Development:</b> Experience in designing and implementing
+                APIs and Rest APIs for communication between applications,
+                microservices
+              </p>
             </li>
             <li>
-              <b>Data Analysis:</b> Skilled in business and financial data
-              analysis, ensuring data-driven insights for informed
-              decision-making.
+              <p>
+                <b>Data Analysis:</b> Skilled in business and financial data
+                analysis, ensuring data-driven insights for informed
+                decision-making.
+              </p>
             </li>
             <li>
-              <b>UI Development:</b> Proficient in creating dynamic and
-              feature-rich user interfaces using React, Redux, Thymeleaf,
-              JavaScript, Typescript, HTML, and CSS.
+              <p>
+                <b>UI Development:</b> Proficient in creating dynamic and
+                feature-rich user interfaces using React, Redux, Thymeleaf,
+                JavaScript, Typescript, HTML, and CSS.
+              </p>
             </li>
             <li>
-              <b>Database Management:</b> Expertise in working with both NoSQL
-              (MongoDB) and relational databases (Oracle, MySQL, Sybase) to
-              store and retrieve data efficiently.
+              <p>
+                <b>Database Management:</b> Expertise in working with both NoSQL
+                (MongoDB) and relational databases (Oracle, MySQL, Sybase) to
+                store and retrieve data efficiently.
+              </p>
             </li>
             <li>
-              <b>Testing and Quality Assurance:</b> Implemented testing tools
-              for downstream processes, emphasizing data quality and
-              consistency. Skilled in JUnit4-5, Mockito and Cucumber for
-              comprehensive TDD and BDD testing.
+              <p>
+                <b>Testing and Quality Assurance:</b> Implemented testing tools
+                for downstream processes, emphasizing data quality and
+                consistency. Skilled in JUnit4-5, Mockito and Cucumber for
+                comprehensive TDD and BDD testing.
+              </p>
             </li>
             <li>
-              <b>Continuous Learning:</b> Always trying to find time to learn
-              something new to improve my skills and expand my knowledge base
+              <p>
+                <b>Continuous Learning:</b> Always trying to find time to learn
+                something new to improve my skills and expand my knowledge base
+              </p>
             </li>
             <li>
-              <b>Versatility:</b> Seamlessly adapting to new technologies and
-              new, challenging environments
+              <p>
+                <b>Versatility:</b> Seamlessly adapting to new technologies and
+                new, challenging environments
+              </p>
             </li>
             <li>
-              <b>Agile Collaboration:</b> Experienced in agile development
-              methodologies, emphasizing adaptability and collaboration to
-              achieve project success and to ensure a smooth flow of the
-              development process through regular meetings and assessments.
-              <br />Also experienced in leading development for minor projects
+              <p>
+                <b>Agile Collaboration:</b> Experienced in agile development
+                methodologies, emphasizing adaptability and collaboration to
+                achieve project success and to ensure a smooth flow of the
+                development process through regular meetings and assessments.
+              </p>
             </li>
           </ul>
         </div>
@@ -164,21 +189,68 @@
                 <b class="dates">2024. Oct - </b>Citi - Assistant Vice President
                 - Engineer Senior Analyst
               </p>
-              <ul>
-                <li>Spring boot</li>
-                <li>Microservices</li>
-                <li>REST API</li>
-                <li>Cryptography</li>
-                <li>Data leak protection</li>
-                <li>Bash</li>
-                <li>Linux</li>
-                <li>Container service - Docker, Kubernetes integration</li>
-                <li>Application deployment with Harness</li>
+              <h4>Key Responsibilities & Contributions</h4>
+              <ul class="contributions">
                 <li>
-                  Additional front-end development and testing skills - React
-                  (jsx, tsx), Redux, Typescript, Node.js, Jest
+                  <p>
+                    Responsible for the development and maintenance of multiple
+                    containerized middleware UI and backend services running
+                    across Citi’s internal server infrastructure,<br />
+                    supporting internal users across the organization.
+                  </p>
                 </li>
-                <li>BDD and TDD Testing concepts - Cucumber, Mockito, JUnit</li>
+                <li>
+                  <p>
+                    Contributed to systems focused on prevention of data leaks,
+                    ensuring secure handling, classification, and protection of
+                    sensitive information.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Collaborated with end-users and the dedicated data leak
+                    prevention team to gather requirements, address issues, and
+                    deliver features aligned with compliance and security needs.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Served as backend developer for an additional fully
+                    containerized internal application designed to determine and
+                    store sensitivity levels for files saved within the
+                    company’s environment.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Supported deployment, monitoring, and container
+                    orchestration processes, ensuring stable, secure, and
+                    scalable services.
+                  </p>
+                </li>
+              </ul>
+              <h4>Tech stack</h4>
+              <ul class="tech-stack">
+                <li><p>Spring boot</p></li>
+                <li><p>Microservices</p></li>
+                <li><p>REST API</p></li>
+                <li><p>Cryptography</p></li>
+                <li><p>Data leak protection</p></li>
+                <li><p>Bash</p></li>
+                <li><p>Linux</p></li>
+                <li>
+                  <p>Container service - Docker, Kubernetes integration</p>
+                </li>
+                <li><p>Application deployment with Harness</p></li>
+                <li>
+                  <p>
+                    Additional front-end development and testing skills - React
+                    (jsx, tsx), Redux, Typescript, Node.js, Jest
+                  </p>
+                </li>
+                <li>
+                  <p>BDD and TDD Testing concepts - Cucumber, Mockito, JUnit</p>
+                </li>
               </ul>
             </li>
             <li class="experience">
@@ -186,34 +258,61 @@
                 <b class="dates">2023. May - 2024. Oct </b>Citi - Apps Dev
                 Intermediate Programmer Analyst
               </p>
-              <ul>
-                <li>Spring boot</li>
-                <li>Gradle/Maven</li>
-                <li>Oracle DB</li>
-                <li>Bash</li>
-                <li>Linux</li>
+              <h4>Key Responsibilities & Contributions</h4>
+              <ul class="contributions">
                 <li>
-                  Front-end development in HTML, CSS, JavaScript, Thymeleaf
+                  <p>
+                    Contributed to full-stack development of multiple internal
+                    applications that functioned as a circuit breaker <br />or
+                    an additional validation layer before release-candidate code
+                    was promoted to production.
+                  </p>
                 </li>
                 <li>
-                  Deep knowledge in testing, JUnit, Mockito, Integration - TDD
+                  <p>
+                    Took part in the implementation of a comparison logic that
+                    evaluated output differences between the latest production
+                    release and the current release-candidate, <br />generating
+                    detailed report files for Business Analysts and development
+                    teams to validate expected behaviors.
+                  </p>
                 </li>
                 <li>
-                  Feed monitoring application for application teams' incoming
-                  feeds (circuit breaker)
+                  <p>
+                    Contributed to the development of a continuously running
+                    daemon process that application teams deployed on their
+                    servers to monitor incoming feeds. <br />This process was as
+                    a circuit breaker in production for every team.
+                  </p>
                 </li>
                 <li>
-                  Comparison tool development to test other teams' release
-                  outputs
+                  <p>
+                    Cooperated with teammates in the implementation of
+                    high-efficiency components for reading, and comparing large
+                    datasets,<br />
+                    ensuring performance and reliability for teams handling
+                    high-volume feeds.
+                  </p>
                 </li>
                 <li>
-                  Implementation of efficient tools to read/aggregate/compare
-                  data from huge files
+                  <p>
+                    Collaborated closely with application teams and Business
+                    Analysts to gather requirements, understand validation
+                    needs,
+                    <br />and refine comparison workflows to support pre-release
+                    decision-making.
+                  </p>
                 </li>
-                <li>
-                  Leading development in a local team, collaborating with
-                  developers from all around the world
-                </li>
+              </ul>
+              <h4>Tech stack</h4>
+              <ul class="tech-stack">
+                <li><p>Spring boot</p></li>
+                <li><p>Gradle/Maven</p></li>
+                <li><p>Oracle DB</p></li>
+                <li><p>Bash</p></li>
+                <li><p>Linux</p></li>
+                <li><p>HTML, CSS, JavaScript, Thymeleaf</p></li>
+                <li><p>JUnit, Mockito, Integration - TDD</p></li>
               </ul>
             </li>
             <li class="experience">
@@ -221,23 +320,54 @@
                 <b class="dates">2022. July - 2023. May </b>Citi - Apps Dev
                 Programmer Analyst
               </p>
-              <ul>
-                <li>Spring batch/boot</li>
-                <li>Maven</li>
-                <li>Linux</li>
-                <li>SQL - NoSql Databases</li>
-                <li>Jenkins pipelines</li>
-                <li>JUnit, Mockito testing - TDD</li>
-                <li>Data, Business analysis</li>
+              <h4>Key Responsibilities & Contributions</h4>
+              <ul class="contributions">
                 <li>
-                  Implementation of data aggregation, visualization in templates
-                  by bank regulations and financial requirements
+                  <p>
+                    Contributed to the backend development of an internal
+                    application focused on credit and market risk calculations
+                    and reporting, <br />as well as COREP reporting within the
+                    Basel III framework.
+                  </p>
                 </li>
-                <li>Technological leadership of a financial project</li>
                 <li>
-                  Helping with the onboarding of new junior and senior team
-                  members
+                  <p>
+                    Collaborated with Business Analysts, finance professionals,
+                    and Project Managers to gather requirements and ensure
+                    accurate implementation of risk and reporting processes.
+                  </p>
                 </li>
+                <li>
+                  <p>
+                    Contributed to the aggregation of high-volume transactional
+                    datasets from incoming raw financial data, <br />preparing
+                    the data for further processing.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Implemented data filtering and business logic for processing
+                    large volumes of incoming raw financial data, <br />ensuring
+                    accurate, compliant, and timely output for reporting
+                    purposes.
+                  </p>
+                </li>
+                <li>
+                  <p>
+                    Acted as technical lead for the reporting of an entity,
+                    providing guidance on backend design and implementation.
+                  </p>
+                </li>
+              </ul>
+              <h4>Tech stack</h4>
+              <ul class="tech-stack">
+                <li><p>Spring batch/boot</p></li>
+                <li><p>Maven</p></li>
+                <li><p>Linux</p></li>
+                <li><p>SQL - NoSql Databases</p></li>
+                <li><p>Jenkins pipelines</p></li>
+                <li><p>JUnit, Mockito testing - TDD</p></li>
+                <li><p>Data, Business analysis</p></li>
               </ul>
             </li>
             <li class="experience">
@@ -245,14 +375,14 @@
                 <b class="dates">2021. May - </b>Udemy courses, self-learning
               </p>
               <ul>
-                <li>Java basics</li>
-                <li>Algorithms</li>
-                <li>Problem-solving</li>
-                <li>Gradle</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>MySql, H2 Databases</li>
-                <li>JUnit testing</li>
+                <li><p>Java basics</p></li>
+                <li><p>Algorithms</p></li>
+                <li><p>Problem-solving</p></li>
+                <li><p>Gradle</p></li>
+                <li><p>HTML</p></li>
+                <li><p>CSS</p></li>
+                <li><p>MySql, H2 Databases</p></li>
+                <li><p>JUnit</p></li>
               </ul>
             </li>
           </ul>
@@ -290,14 +420,20 @@
           <p>
             Eager to be part of a dynamic and agile group, my goal is to
             continually expand my knowledge and skill set, in both back- and
-            front-end development and data analysis, creating innovative
-            solutions and ensuring success in future endeavors. <br />
+            front-end development and data analysis, <br />creating innovative
+            solutions and ensuring success in future endeavors.
+          </p>
+          <p>
             Committed to both personal and professional growth, I am always
             ready to learn and contribute, seeking a collaborative environment
-            where knowledge-sharing and mentorship is the way to go. <br />
+            where knowledge-sharing and mentorship is the way to go.
+          </p>
+          <p>
             Known for my enthusiasm and willingness to support others, I see
             myself as an influential team member, bringing innovation and
-            success in the fields of software development. <br />
+            success in the fields of software development.
+          </p>
+          <p>
             I aim to achieve success in my developing career trying to always
             provide the best of my knowledge
           </p>
